# pylium

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE.md  README.md  installer.sh  pkgutil_manifest_discovery.py  pyproject.toml  setup-venv.sh  setup_x.py  setup_y.py  test.db  test1.db  test2.db
.old/2025_05_01_old/component.old/: _component.py
.old/2025_05_01_old/core/: __init__.py
.old/2025_05_01_old/core/package/: __main__.py
.old/2025_05_01_old/core/package.old/: __init__.py  _pylium.py
.old/2025_05_01_old/core3/: __init__.py  __main__.py
.old/2025_05_01_old/database.old/: _database.py
.old/2025_05_01_old/testcore/: _impl.py
.old/core/package/: __init__.py  _component.py
.old/core2/: __main__.py  _component.py
.old/core2/component/: __init__.py  __main__.py  _component.py
.old/core3/: _impl.py
.old/core3/config/: __init__.py  _impl.py
.old/core3/log/: __init__.py  __main__.py
.old/core3/package/: _component.py
.old/test1/: _header.py
.old/testcore/: __main__.py  _component.py
archive/2025_05_01_old/core2/: _impl.py
archive/2025_05_01_old/database.old/: __init__.py
archive/2025_05_01_old/test1/: __main__.py
plugins/example_plugin/: pyproject.toml
src/pylium/: __header__.py  __init__.py  __main__.py  __manifest__.py  __project__.py  _impl.py  _version.py  sitecustomize.py  sitetest.py  test.py
src/pylium/core/: __header__.py  __impl__.py  __init__.py  __main__.py  _component.py  _core.py  _h.py  _header.py  _impl.py  manifest.py
src/pylium/manifest/: __header__.py  __impl__.py  __init__.py  __main__.py  _cli.py  _enums.py  _flags.py  _license.py  _manifest.py  _types.py  test.py
src/pylium/test1/: __init__.py  __main__.py  _header.py  _impl.py
src/pylium/testcore/: __init__.py  __main__.py  _component.py  _impl.py
tests/: conftest.py  test_component.py  test_module.py
tests/core/: demo_bundle.py  demo_h.py  demo_impl.py  missing_impl_h.py  test_header.py  test_manifest.py
(+118 files in other folders)
