[build-system]
requires = [
    "setuptools>=42",
    "wheel>=0.39.0",
    "setuptools_scm>=8.0.0",
    "virtualenv>=20.0.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "pylium"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fire @ git+https://github.com/Verlusti/python-fire.git"
]

[project.optional-dependencies]
dev = [
    "pip-tools>=7.0.0",
    "virtualenv>=20.0.0",
    "pytest>=7.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["pylium", "pylium.core"]

[tool.setuptools_scm]
write_to = "src/pylium/_version.py"
version_scheme = "post-release"
local_scheme = "node-and-date" 

[tool.pytest.ini_options]
norecursedirs = ".venv .git build dist external *.egg-info src .old" 
# Add any other top-level dirs you want to skip.
# 'src' is often skipped in norecursedirs if 'testpaths' is set to 'tests', 
# or if tests are only in the 'tests' directory.
# If your tests directory itself is named 'src', then you wouldn't put 'src' here.
testpaths = "tests" # This tells pytest to primarily look in the 'tests' directory